Closed Bug 641741 Opened 15 years ago Closed 15 years ago

TI: Crash [@ js::types::TypeFailure] with missing type pushed inference failure

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: gkw, Unassigned)

References

Details

(Keywords: crash, testcase, Whiteboard: fixed-in-jaegermonkey)

Crash Data

eval("var[]=(++false[x])()=[],x") crashes js debug shells on JM changeset 1ce8efbb75cc with -m, -a and -n at js::types::TypeFailure showing: [infer failure] Missing type at #3:00007 pushed 0: float
The value pushed by the interpreter in overflowing object inc/dec ops (i.e. INCELEM) was not always marked as a double. http://hg.mozilla.org/projects/jaegermonkey/rev/e1a60884a125
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
Crash Signature: [@ js::types::TypeFailure]
A testcase for this bug was automatically identified at js/src/jit-test/tests/basic/bug641741.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.