[INFER] Mark values pushed by overflowing object inc opcodes as doubles, bug 641741.