js/src/jsinterp.cpp
@@ -4126,6 +4126,8 @@ do_incop:
             goto error;
         if (!cx->typeMonitorAssign(obj, id, regs.sp[-1]))
             goto error;
+        if (!regs.sp[-1].isInt32() && !script->typeMonitorOverflow(cx, regs.pc))
+            goto error;
         regs.fp->setAssigning();
         JSBool ok = obj->setProperty(cx, id, &regs.sp[-1], script->strictModeCode);
         regs.fp->clearAssigning();
