js/src/methodjit/StubCalls.cpp
@@ -1674,12 +1674,8 @@ ObjIncOp(VMFrame &f, JSObject *obj, jsid id)
             d += N;
             ref.setNumber(d);
         }
-        if (!v.setNumber(d)) {
-            if (!f.script()->typeMonitorOverflow(cx, f.regs.pc) ||
-                !cx->addTypePropertyId(obj->getType(), id, TYPE_DOUBLE)) {
-                return false;
-            }
-        }
+        if (!v.setNumber(d) && !f.script()->typeMonitorOverflow(cx, f.regs.pc))
+            return false;
         if (!cx->typeMonitorAssign(obj, id, v))
             return false;
         fp->setAssigning();
